# indigo

./: .clang-format  .gitignore  .sublime-project  CMakeLists.txt  LICENSE  README.md  compile_commands.json  indigo.sublime-workspace
config_files/: settings.config
include/: CMakeLists.txt  Queue.h  binary_tree.h  buffer.h  config.h  crypto_utils.h  device_discovery.h  dpht.h  dynamic_array.h  event_flags.h  file_transfer.h  hash_functions.h  hash_table.h  indigo_errors.h  indigo_types.h  keygen.h  lht.h  logger.h  mempool.h  path.h  session.h  session_types.h  static_allocator.h
include/cli/: CMakeLists.txt  cli.h
include/gui/: CMakeLists.txt  gui.h
include/indigo_core/: CMakeLists.txt  indigo_core.h  manager.h  net_io.h  net_monitor.h  packet_handler.h
include/tui/: CMakeLists.txt  tui.h
src/: CMakeLists.txt  main.c  main.sublime-workspace  main_cli.c  main_gui.c  main_tui.c
src/libs/: CMakeLists.txt  device_discovery.c  dynamic_array.c  event_flags.c
src/libs/cli/: CMakeLists.txt  cli.c
src/libs/device_discovery/: CMakeLists.txt  device_discovery.c  event_flags.c
src/libs/file_transfer/: CMakeLists.txt  crypto_utils.c  file_transfer.c  session.c
src/libs/gui/: CMakeLists.txt  gui.cpp
src/libs/indigo_core/: CMakeLists.txt  indigo_core.c  manager.c  net_io.c  net_monitor.c  packet_handler.c
src/libs/keygen/: CMakeLists.txt  keygen.c
src/libs/tui/: CMakeLists.txt  tui.c
src/libs/utilities/: CMakeLists.txt
src/libs/utilities/binary_tree/: CMakeLists.txt  binary_tree.c
src/libs/utilities/buffers/: CMakeLists.txt  buffer.c
src/libs/utilities/config/: CMakeLists.txt  config.c
src/libs/utilities/crypto/: CMakeLists.txt  crypto_utils.c
src/libs/utilities/event_flags/: CMakeLists.txt  event_flags.c
src/libs/utilities/hash_table/: CMakeLists.txt  dpht.c  hash_functions.c  hash_table.c  lht.c
src/libs/utilities/logger/: CMakeLists.txt  logger.c
src/libs/utilities/mempool/: CMakeLists.txt  mempool.c
src/libs/utilities/path/: CMakeLists.txt  path.c
src/libs/utilities/queue/: CMakeLists.txt  Queue.c
src/libs/utilities/simple_buffer/: buffer.c
src/libs/utilities/static_allocator/: CMakeLists.txt  static_allocator.c
test/: CMakeLists.txt  test.c  test.h
